<resources>
    <string name="app_name">Android_Kotlin_Demo</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="register">Register</string>
    <string name="ERROR_INTERNET_CONNECTION">No Internet Connection</string>
    <string name="warning">Warning</string>
    <string name="ERROR_SOMETHING_WRONG">Oops! An error has occurred. *_*</string>
    <string name="regex_accept_all">^.{0,50}$</string>
    <string name="check_field">Check the field.</string>
    <string name="show_password">Show</string>
    <string name="hide_password">Hide</string>


    <string name="welcome_message">Welcome</string>



    <string name="ERROR_INVALID_EMAIL_FORMAT">Invalid email address.</string>
    <string name="EMAIL_PLACEHOLDER">e.g. user@example.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_error">Password field is empty</string>



    <string name="regex_min_1_chars" >^.{1,}$</string>


</resources>